--- a/SRC/My-Zone/My-Zone/Info.plist
+++ b/SRC/My-Zone/My-Zone/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
