--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 # 所有的在这里的文件都将被git管理库忽略
-
+SRC/My-Zone/My-Zone.xcworkspace/xcuserdata/qitmac000030.xcuserdatad/UserInterfaceState.xcuserstate
 *~
 .DS_Store
 *.xcuserstate
