--- a/SRC/My-Zone/My-Zone/Info.plist
+++ b/SRC/My-Zone/My-Zone/Info.plist
@@ -45,5 +45,11 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>kTCCServiceMediaLibrary</key>
+	<string>用户即将使用本机音乐</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>用户即将使用媒体库信息</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>用户即将使用麦克风</string>
 </dict>
 </plist>
